shipping to shopping

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="footer__info">
-          <div class="copyright">{{site.time | date: '%Y'}} &copy; <a href="/">{{site.data.settings.title}}</a>. Crafted & Designed by <a href="https://jekyllthemes.io/developers/artem-sheludko">Artem Sheludko</a>.</div>
+          <div class="copyright">{{site.time | date: '%Y'}} &copy; <a href="/">{{site.data.settings.title}}</a></div>
         </div>
 
       </div>
