--- a/_includes/section-blog.html
+++ b/_includes/section-blog.html
@@ -13,7 +13,19 @@
       </div>
     </div>
   </div>
+  
+  <div class="gallery-box">
+  <div class="gallery">
+    <img src="/images/Flower31.jpg">
+    <img src="/images/Flower32.jpg">
+	<img src="/images/Flower32.jpg">
 
+
+ 
+  </div>
+</div>
+  
+{% comment %}
   <div class="container">
     <div class="row">
       {% if site.posts.size > 0 %}
@@ -23,6 +35,7 @@
       {% endif %}
     </div>
   </div>
+{% endcomment %}
 
 </section>
 <!-- end blog -->
