--- a/_includes/section-blog.html
+++ b/_includes/section-blog.html
@@ -16,9 +16,9 @@
   
   <div class="gallery-box">
   <div class="gallery">
-    <img src="/images/Flower31.jpg">
-    <img src="/images/Flower32.jpg">
-	<img src="/images/Flower32.jpg">
+    <img src="/images/LighthouseGallery.jpg">
+    <img src="/images/BigBasin3.jpg">
+	<img src="/images/ACGA.jpg">
 
 
  
