--- a/_includes/disqus-comments.html
+++ b/_includes/disqus-comments.html
@@ -1,4 +1,5 @@
-<!-- begin comments -->
+ {% comment %} 
+ <!-- begin comments -->
 <div class="show-comments">
   <button class="button disqus-button" id="show-comments-button" onclick="disqus();return false;">Comments</button>
 </div>
@@ -33,3 +34,5 @@
   <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
 </noscript>
 <!-- end comments -->
+
+ {% endcomment %} 
