--- a/_includes/article.html
+++ b/_includes/article.html
@@ -18,7 +18,7 @@
         <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
       </h2>
 
-      <p class="article__excerpt">{% if post.description %}{{ post.description | markdownify}}{% else %}{{ post.content | strip_html | truncate: 80 }}{% endif %}</p>
+      <div class="article__excerpt">{% if post.description %}{{ post.description | markdownify}}{% else %}{{ post.content | strip_html | truncate: 80 }}{% endif %}</div>
 
     </div>
   </div>
